# AGIS

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  run_demo.py
common/: CMakeLists.txt
common/core/include/core/: app_log.h  export.h  main_globals.h  resource.h
common/core/src/: main_globals.cpp
common/debug/include/debug/: ui_debug_pick.h
common/debug/src/: ui_debug_pick.cpp
common/utils/include/utils/: agis_gdal_runtime_env.h  agis_ui_l10n.h  ui_font.h  ui_layout.h  ui_theme.h  utf8_wide.h
common/utils/src/: agis_gdal_runtime_env.cpp  agis_ui_l10n.cpp  ui_font.cpp  ui_layout.cpp  ui_theme.cpp
gis-desktop-win32/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  agis_build_util.py  app.manifest  build.py  publish.py  run.py  run_conv.py  run_ui_demo.py  test.py
gis-desktop-win32/cmake/: AGISBundledBasisUniversal.cmake  AGISBundledCurl.cmake  AGISBundledDraco.cmake  AGISBundledExpat.cmake  AGISBundledGDAL.cmake  AGISBundledLASzip.cmake  AGISBundledLibTIFF.cmake  AGISBundledPROJ.cmake  AGISBundledSQLite.cmake  FindCURL.cmake  FindSQLite3.cmake  FindTIFF.cmake  agis_clean_proj_data_stage.cmake
gis-desktop-win32/src/: app_log.cpp  gdiplus_ui.cpp  gdiplus_ui.h  main.cpp  map_engine.cpp  map_engine.h  map_gpu.cpp  map_projection.cpp  resource.h
gis-desktop-win32/src/app/: agis_gdal_runtime_env.cpp  agis_gdal_runtime_env.h  help_data_drivers.cpp  help_data_drivers.h  main.cpp  main_app.h  main_chrome.cpp  main_convert.cpp  main_convert_standalone.cpp  main_gis_document.cpp  main_globals.cpp  main_globals.h  main_model_preview.cpp  main_panels.cpp  model_preview_bgfx.cpp  model_preview_bgfx.h  model_preview_types.h  resource.h  tiles_gltf_loader.cpp  tiles_gltf_loader.h  ui_debug_pick.cpp  ui_engine_demo.cpp  ui_engine_demo.h  ui_engine_demo_main.cpp  ui_engine_demo_platform_win32.cpp  ui_engine_demo_win32.cpp  ui_font.h  ui_layout.cpp  ui_private.h  ui_theme.cpp
gis-desktop-win32/src/app/converter/: main_convert.cpp  main_convert_standalone.cpp
gis-desktop-win32/src/app/gis_document/: main_gis_document.cpp
gis-desktop-win32/src/app/preview/: main_model_preview.cpp  model_preview_bgfx.cpp  model_preview_bgfx.h  model_preview_types.h  tiles_gltf_loader.cpp
gis-desktop-win32/src/app/tools/: agis_convert_gis_to_tile.cpp  agis_convert_tile_to_gis.cpp  convert_backend_common.cpp  convert_backend_common.h  ktx2_basis_encode.cpp
gis-desktop-win32/src/app/workbench/: gis_document_ui.cpp  help_data_drivers.cpp  main.cpp  main_chrome.cpp  main_debug.cpp  main_panels.cpp  workbench_tool_launch.cpp
gis-desktop-win32/src/core/: app_log.cpp  app_log.h
gis-desktop-win32/src/map/: map_document.cpp  map_document.h  map_engine.cpp  map_engine.h  map_engine_internal.h  map_gpu.cpp  map_gpu.h  map_layer.cpp  map_layer.h  map_layer_driver.cpp  map_layer_driver_gdal.cpp  map_layer_driver_gdal.h  map_projection.cpp  map_projection.h
gis-desktop-win32/src/map_engine/: map_document.cpp  map_document.h  map_engine.cpp  map_engine.h  map_engine_internal.h  map_gpu.cpp  map_layer.cpp  map_layer.h  map_layer_driver_gdal.h  map_projection.cpp
gis-desktop-win32/src/tools/: agis_convert_gis_to_model.cpp  agis_convert_gis_to_tile.cpp  agis_convert_model_to_gis.cpp  agis_convert_model_to_model.cpp  agis_convert_model_to_tile.cpp  agis_convert_tile_to_gis.cpp  agis_convert_tile_to_model.cpp  convert_backend_common.cpp  convert_backend_common.h  ktx2_basis_encode.h
gis-desktop-win32/src/ui/: app.cpp  app.h  gdiplus_ui.cpp  widget.cpp  widget.h  widgets.cpp  widgets.h  widgets_all.h  widgets_shell.cpp  widgets_shell.h
gis-desktop-win32/src/ui_engine/: app.cpp  app.h  app_launch_params.h  gdiplus_ui.cpp  gdiplus_ui.h  platform_cocoa.h  platform_gui.h  platform_windows.cpp  platform_windows.h  platform_xcb.h  platform_xlib.h  ui_types.h  widget.cpp  widget.h  widget_core.h  widgets.cpp  widgets.h  widgets_all.h  widgets_mainframe.h  widgets_shell.cpp  widgets_shell.h
map_engine/: CMakeLists.txt  README.md  run_demo.py  run_map_demo.py
map_engine/demo/src/: demo.cpp  entry.cpp  map_engine_demo_main.cpp
map_engine/document/include/map_engine/: map.h  map_document.h
map_engine/document/src/: map.cpp  map_document.cpp
map_engine/engine/include/map_engine/: export.h  map_engine.h  map_scheduler.h
map_engine/engine/src/: map_engine.cpp  map_scheduler.cpp
map_engine/gis_file_io/include/map_engine/: gis_xml.h
map_engine/gis_file_io/src/: gis_project_xml.cpp
map_engine/gpu/src/: map_gpu_bgfx.cpp
map_engine/include/map_engine/: map_engine.h  map_projection.h  map_utf8.h
map_engine/io/include/map_engine/: archive_file_io.h  io_read_channel.h  io_types.h  local_file_io.h  map_io.h  remote_file_io.h
map_engine/io/src/: io.cpp
map_engine/io_gis/include/map_engine/: gis_project_xml.h
map_engine/io_gis/src/: gis_project_xml.cpp  gis_xml.cpp
map_engine/layer/include/map_engine/: map_layer_driver.h
map_engine/layer/src/: map_layer_driver.cpp  map_layer_driver_gdal.cpp
map_engine/map/include/map_engine/: map_data_source.h  map_engine_internal.h  map_layer.h
map_engine/map/src/: map.cpp  map_data_source.cpp  map_layer.cpp
map_engine/map/src/map_data_source/: map_data_source_gdal.cpp  map_data_source_gdal.h
map_engine/platform/include/map_engine/: message_queue.h  native_window.h  platform.h  render_device_context.h
map_engine/platform/src/: message_queue.cpp  render_device_context.cpp  win32.cpp
map_engine/platform/src/native_window/: map_host_win32.cpp  map_host_win32.h  native_window_win32.h
map_engine/platform/src/platform/: platform_win32.cpp
map_engine/platform/src/render_device_context/: render_device_context_bgfx.cpp  render_device_context_d2d.cpp
map_engine/projection/include/map_engine/: map_projection.h
map_engine/projection/src/: map_projection.cpp
map_engine/render/src/: map_gpu.cpp  map_gpu_bgfx.cpp  renderer.cpp
map_engine/scene_graph/src/: scene_graph.cpp  scene_node.cpp
map_engine/shell/src/: map_engine.cpp
map_engine/src/: map_gpu_d2d.cpp
map_engine/view/src/: map_view.cpp  map_viewport.cpp  native_window.cpp
(+120 files in other folders)
